--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,18 +8,20 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/RedTheme">
+        android:theme="@style/CustomTheme">
+
         <activity android:name=".Activities.ShoppingListActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
         <activity
             android:name=".Activities.MaximizedListActivity"
             android:label="@string/title_activity_optimized_list"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/CustomTheme">
+        </activity>
     </application>
 
 </manifest>
