--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.patrick.shopper">
+    package="com.gmail.patrickma345.shopper">
 
     <application
         android:allowBackup="true"
@@ -10,7 +10,7 @@
         android:supportsRtl="true"
         android:theme="@style/CustomTheme">
 
-        <activity android:name=".Activities.ShoppingListActivity">
+        <activity android:name="com.gmail.patrickma345.shopper.Activities.ShoppingListActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -18,7 +18,7 @@
         </activity>
 
         <activity
-            android:name=".Activities.MaximizedListActivity"
+            android:name="com.gmail.patrickma345.shopper.Activities.MaximizedListActivity"
             android:label="@string/title_activity_optimized_list"
             android:theme="@style/CustomTheme">
         </activity>
